add store and price db tables and models
