# flask/endpoints/prices.py
@@ -1,0 +1,41 @@
+from datetime import datetime
+from flask import jsonify, abort, request
+from config import db
+from models.price import Price, price_schema, prices_schema
+from models.product import Product
+from models.store import Store
+
+def get_all():
+    prices = Price.query.all()
+    
+    # for price in prices:
+    #     product = Product.query.filter(Product.EAN == price.productEAN).one_or_none()
+    #
+    #     if product is None:
+    #         return abort(404)
+    #
+    #     price.brand = product.brand
+    #     price.name = product.brand
+    #     price.category = product.category
+    #     price.image_url = product.image_url
+    #     return price.jsonify()
+
+    return jsonify(prices_schema.dump(prices))
+
+def add_price():
+    price_info = request.get_json()
+    price_entry = Price()
+    store = Store.query.filter(price_info["store_name"] == Store.name)\
+                                    .one_or_none()
+    if store is None:
+        abort(400, f"Store with name {price_info['store_name']} doesn't exist")
+
+    price_entry.product_EAN = price_info["product_EAN"]
+    price_entry.price = price_info["price"]
+    price_entry.store_name = store.name
+    price_entry.date = datetime.now()
+
+    db.session.add(price_entry)
+    db.session.commit()
+    return (price_schema.jsonify(price_entry), 201)
+
