# flask/swagger.yml
@@ -26,6 +26,33 @@ components:
           type: "string"
         size:
           type: "string"
+    Store:
+      type: "object"
+      required:
+        - id
+      properties:
+        id:
+          type: "integer"
+        name:
+          type: "string"
+        location:
+          type: "string"
+    Price:
+      type: "object"
+      required:
+        - product_EAN
+        - store_name
+        - date
+      properties:
+        product_EAN:
+          type: "string"
+        store_name:
+          type: "string"
+        price:
+          type: "number"
+        date:
+          type: "string"
+          format: "date-time"
 
   parameters:
     EAN:
@@ -46,7 +73,7 @@ components:
 paths:
   /products:
     get:
-      operationId: "products.get_all"
+      operationId: "endpoints.products.get_all"
       tags:
         - "Products"
       summary: "Get all products"
@@ -54,7 +81,7 @@ paths:
         "200":
           description: "Successfully read products"
     post:
-      operationId: "products.add_product"
+      operationId: "endpoints.products.add_product"
       tags:
         - "Products"
       summary: "Add a product"
@@ -64,7 +91,7 @@ paths:
         content:
           application/json:
             schema:
-              x-body-name: "product EAN"
+              x-body-name: "Product EAN"
               type: "object"
               properties:
                 EAN:
@@ -74,7 +101,7 @@ paths:
           description: "Successfully added a product"
   /products/{EAN}:
     get:
-      operationId: "products.get_by_EAN"
+      operationId: "endpoints.products.get_by_EAN"
       tags:
         - "Products"
       summary: "Get product information based on its EAN"
@@ -85,7 +112,7 @@ paths:
           description: "Successfully read product"
   /products/{name}:
     get:
-      operationId: "products.get_by_name"
+      operationId: "endpoints.products.get_by_name"
       tags:
         - "Products"
       summary: "Get product information by its name"
@@ -94,3 +121,58 @@ paths:
       responses:
         "200":
           description: "Successfully found product"
+  /stores:
+    get:
+      operationId: "endpoints.stores.get_all"
+      tags:
+        - "Stores"
+      summary: "Get all registered stores"
+      responses:
+        "200":
+          description: "Successfully read stores"
+    post:
+      operationId: "endpoints.stores.add_store"
+      tags:
+        - "Stores"
+      summary: "Add a store"
+      requestBody:
+        description: "Add product info based on its name"
+        required: True
+        content:
+          application/json:
+            schema:
+              x-body-name: "Store name"
+              type: "object"
+              properties:
+                name:
+                  type: "string"
+      responses:
+        "201":
+          description: "Successfully added a store"
+  /prices:
+    get:
+      operationId: "endpoints.prices.get_all"
+      tags:
+        - "Products"
+        - "Stores"
+        - "Prices"
+      summary: "Get pagination of all price entries"
+      responses:
+        "200":
+          description: "Successfully read price entries"
+    post:
+      operationId: "endpoints.prices.add_price"
+      tags:
+        - "Prices"
+      summary: "Add a price entry"
+      requestBody:
+        description: "Add price entry"
+        required: True
+        content:
+          application/json:
+            schema:
+              x-body-name: "Store name"
+              $ref: "#/components/schemas/Price"
+      responses:
+        "201":
+          description: "Successfully added a store"
